# RunnAlyst

./: .gitattributes  .gitignore  README.md  analizza_corse.py  pyproject.toml
.github/workflows/: commit-lint.yml  python-cy.yml
runnalyst/: cli.py
runnalyst/core/: parser.py  reporter.py
scripts/: Avvia Analisi.cmd
